--- a/index.html
+++ b/index.html
@@ -2,57 +2,86 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Virtual Display Case</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css">
-  <script src="./app.js" defer></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Virtual Display Case</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
+    <!-- <script src="./app.js" defer></script> -->
 </head>
 
 <body>
-  <header>
-    <h1>Casey Sherman</h1>
-    <h2>Full Stack Web Developer and Programmer</h2>
-  </header>
-  <section id="badges-container">
-    <a href="https://www.credly.com/earner/earned" target="_blank">
-      <h1 id="badges-header">My Credly Dashboard</h1>
-    </a>
+    <header>
+        <h1>Casey Sherman</h1>
+        <h2>Full Stack Web Developer and Programmer</h2>
+    </header>
 
-    <a href="https://www.credly.com/badges/3ee15477-fc6e-4c4d-8feb-86d31bedc857/public_url" target="_blank"><img
-        src="./images/project-management.png" alt="Project management badge"></a>
-    <a href="https://www.credly.com/badges/ff70a63a-b0e2-47af-9910-5e8fff5cdeef/public_url" target="_blank"><img
-        src="./images/end-to-end-e2e-testing.png" alt="End to end testing badge"></a>
-    <a href="https://www.credly.com/badges/f521bb83-91ab-459d-9022-9fee4ea99df6/public_url" target="_blank"><img
-        src="./images/data-structures-algorithms.png" alt="Data structures and algorithms badge"></a>
-    <a href="https://www.credly.com/badges/c27b7a30-e84e-495d-8c40-998b778ffea0/public_url" target="_blank"><img
-        src="./images/web-infrastructure-server-deployment.png"
-        alt="Web infrastructure and server deployment badge"></a>
-    <a href="https://www.credly.com/badges/05445e74-fda1-4e7f-899e-5533e7729339/public_url" target="_blank"><img
-        src="./images/advanced-full-stack-web-development.png" alt="Advanced full stack web development badge"></a>
-    <a href="https://www.credly.com/badges/dc6cfee7-08b1-446c-9071-812086837f5d/public_url" target="_blank"><img
-        src="./images/object-oriented-programming.png" alt="Object oriented programming badge"></a>
-    <a href="https://www.credly.com/badges/abc11d3f-750f-41c2-a9b4-987e0ed075a0/public_url" target="_blank"><img
-        src="./images/full-stack-web-developer-mern.png" alt="MERN stack badge"></a>
-    <a href="https://www.credly.com/badges/a02d40bb-813c-4381-a37d-78fe8eaf853d/public_url" target="_blank"><img
-        src="./images/career-ready.png" alt="Career readiness badge"></a>
-    <a href="https://www.credly.com/badges/fd4b75d7-440a-4772-917b-d65326edcfb5/public_url" target="_blank"><img
-        src="./images/back-end-web-applications.png" alt="Beckend web applications badge"></a>
-    <a href="https://www.credly.com/badges/1ea2283c-0d32-4c68-92cf-7adf8e1f79ca/public_url" target="_blank"><img
-        src="./images/git-version-control.png" alt="Git version control badge"></a>
-    <a href="https://www.credly.com/badges/b0b26e2e-61f3-4934-b1e3-bca290d1623c/public_url" target="_blank"><img
-        src="./images/front-end-web-applications.png" alt="Front end web applications badge"></a>
-    <a href="https://www.credly.com/badges/bbf83c54-d3c4-42fe-bff5-28e07ea482c6/public_url" target="_blank"><img
-        src="./images/problem-solver-debugger.1.png" alt="Problem solver and debugger badge"></a>
-    <a href="https://www.credly.com/badges/e64360d8-7e09-451c-9c3c-53d28a4b9fe6/public_url" target="_blank"><img
-        src="./images/web-development-foundations.png" alt="Web development foundations badge"></a>
+    <section id="badges-container">
+        <h1 id="badges-header">University issued badges</h1>
+        <a href="https://www.credly.com/badges/3ee15477-fc6e-4c4d-8feb-86d31bedc857/public_url" target="_blank"><img
+                src="./images/project-management.png" alt="Project management badge"></a>
+        <a href="https://www.credly.com/badges/ff70a63a-b0e2-47af-9910-5e8fff5cdeef/public_url" target="_blank"><img
+                src="./images/end-to-end-e2e-testing.png" alt="End to end testing badge"></a>
+        <a href="https://www.credly.com/badges/f521bb83-91ab-459d-9022-9fee4ea99df6/public_url" target="_blank"><img
+                src="./images/data-structures-algorithms.png" alt="Data structures and algorithms badge"></a>
+        <a href="https://www.credly.com/badges/c27b7a30-e84e-495d-8c40-998b778ffea0/public_url" target="_blank"><img
+                src="./images/web-infrastructure-server-deployment.png"
+                alt="Web infrastructure and server deployment badge"></a>
+        <a href="https://www.credly.com/badges/05445e74-fda1-4e7f-899e-5533e7729339/public_url" target="_blank"><img
+                src="./images/advanced-full-stack-web-development.png"
+                alt="Advanced full stack web development badge"></a>
+        <a href="https://www.credly.com/badges/dc6cfee7-08b1-446c-9071-812086837f5d/public_url" target="_blank"><img
+                src="./images/object-oriented-programming.png" alt="Object oriented programming badge"></a>
+        <a href="https://www.credly.com/badges/abc11d3f-750f-41c2-a9b4-987e0ed075a0/public_url" target="_blank"><img
+                src="./images/full-stack-web-developer-mern.png" alt="MERN stack badge"></a>
+        <a href="https://www.credly.com/badges/a02d40bb-813c-4381-a37d-78fe8eaf853d/public_url" target="_blank"><img
+                src="./images/career-ready.png" alt="Career readiness badge"></a>
+        <a href="https://www.credly.com/badges/fd4b75d7-440a-4772-917b-d65326edcfb5/public_url" target="_blank"><img
+                src="./images/back-end-web-applications.png" alt="Beckend web applications badge"></a>
+        <a href="https://www.credly.com/badges/1ea2283c-0d32-4c68-92cf-7adf8e1f79ca/public_url" target="_blank"><img
+                src="./images/git-version-control.png" alt="Git version control badge"></a>
+        <a href="https://www.credly.com/badges/b0b26e2e-61f3-4934-b1e3-bca290d1623c/public_url" target="_blank"><img
+                src="./images/front-end-web-applications.png" alt="Front end web applications badge"></a>
+        <a href="https://www.credly.com/badges/bbf83c54-d3c4-42fe-bff5-28e07ea482c6/public_url" target="_blank"><img
+                src="./images/problem-solver-debugger.1.png" alt="Problem solver and debugger badge"></a>
+        <a href="https://www.credly.com/badges/e64360d8-7e09-451c-9c3c-53d28a4b9fe6/public_url" target="_blank"><img
+                src="./images/web-development-foundations.png" alt="Web development foundations badge"></a>
+    </section>
+
+    <section id="videos-container">
+        <h1>Project Videos</h1>
+        <hr>
+        <p>Videos showcasing some of my Bryan University projects that earned me my degree in Full Stack Web Design.</p>
+        <a href="https://portfolium.com/entry/netflix_clone" target="_blank">
+            <b>
+                <p>Netflix Clone</p>
+            </b><img src="./images/nf_clone.png" alt="Netflix clone project">
+        </a>
+        <a href="https://portfolium.com/entry/fsw-120-capstone-project-twitter-clone" target="blank"><b>
+                <p>Twitter Clone</p>
+            </b><img src="./images/twitter_clone.png" alt="Twitter clone project"></a>
+        <a href="https://portfolium.com/entry/afs-210-capstone-project-media-player-1" target="_blank"><b>
+                <p>Media Player</p>
+            </b><img src="./images/mp_project.png" alt="Media player project"></a>
+        <a href="https://portfolium.com/entry/fsw-130-capstone-meme-generator" target="_blank"><b>
+                <p>Meme Generator</p>
+            </b><img src="./images/mg_project.png" alt="Meme generator project"></a>
+        <a href="https://portfolium.com/entry/fsw-135-rock-the-vote-capstone-project"><b>
+                <p>Rock the Vote Project</p>
+            </b><img src="./images/rtv_project.png" alt="Rock the vote project"></a>
+    </section>
 
 
-  </section>
+
+    <footer>
+        <p>Contact me on <b><a href="https://www.linkedin.com/in/csherms/" target="_blank">Linkedin</a></b></p>
+        <p>Visit <b><a href="https://portfolium.com/caseysherman2" target="_blank">Portfolium</a></b> to see more of my
+            projects.</p>
+        <p>See my <a href="./images/Resume.pdf" target="_blank"><b>Resume</b></a></p>
+    </footer>
 
 </body>
 
