--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -5,11 +5,104 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./app.js" defer></script>
+  <link rel="stylesheet" href="./styles.css">
   <title>Second Portfolio</title>
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <main>
+    <!-- Landing Area -->
+    <div id="landing">
+      <div id="landing-text">
+        <div id="landing-text-inner">
+          <h1>CASEY SHERMAN</h1>
+          <h2>Web Development and Design</h2>
+          <a href="#images" class="btn" id="view-work">View Work</a>
+        </div>
+      </div>
+      <div id="landing-image"></div>
+    </div>
+
+    <!-- Work Area -->
+    <div id="images">
+      <div id="header">
+        <h2>My Work</h2>
+      </div>
+
+      <img src="https://source.unsplash.com/random/?nature,water" alt="random image">
+      <div class="caption">
+        <h3>Photo One</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+      </div>
+      <img src="https://source.unsplash.com/random/?nature,trees" alt="random image">
+      <div class="caption">
+        <h3>Photo Two</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+      </div>
+      <img src="https://source.unsplash.com/random/?nature,flowers" alt="random image">
+      <div class="caption">
+        <h3>Photo Three</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+      </div>
+      <img src="https://source.unsplash.com/random/?nature,animals" alt="random image">
+      <div class="caption">
+        <h3>Photo Four</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+      </div>
+      <img src="https://source.unsplash.com/random/?nature,sky" alt="random image">
+      <div class="caption">
+        <h3>Photo Five</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+      </div>
+
+      <!-- Badges Area -->
+      <div id="badges-container">
+        <div id="badges-header">
+          <h1>University issued badges</h1>
+        </div>
+        <div id="badges">
+          <a href="https://www.credly.com/badges/3ee15477-fc6e-4c4d-8feb-86d31bedc857/public_url" target="_blank"><img
+              src="./images/project-management.png" alt="Project management badge"></a>
+          <a href="https://www.credly.com/badges/ff70a63a-b0e2-47af-9910-5e8fff5cdeef/public_url" target="_blank"><img
+              src="./images/end-to-end-e2e-testing.png" alt="End to end testing badge"></a>
+          <a href="https://www.credly.com/badges/f521bb83-91ab-459d-9022-9fee4ea99df6/public_url" target="_blank"><img
+              src="./images/data-structures-algorithms.png" alt="Data structures and algorithms badge"></a>
+          <a href="https://www.credly.com/badges/c27b7a30-e84e-495d-8c40-998b778ffea0/public_url" target="_blank"><img
+              src="./images/web-infrastructure-server-deployment.png"
+              alt="Web infrastructure and server deployment badge"></a>
+          <a href="https://www.credly.com/badges/05445e74-fda1-4e7f-899e-5533e7729339/public_url" target="_blank"><img
+              src="./images/advanced-full-stack-web-development.png"
+              alt="Advanced full stack web development badge"></a>
+          <a href="https://www.credly.com/badges/dc6cfee7-08b1-446c-9071-812086837f5d/public_url" target="_blank"><img
+              src="./images/object-oriented-programming.png" alt="Object oriented programming badge"></a>
+          <a href="https://www.credly.com/badges/abc11d3f-750f-41c2-a9b4-987e0ed075a0/public_url" target="_blank"><img
+              src="./images/full-stack-web-developer-mern.png" alt="MERN stack badge"></a>
+          <a href="https://www.credly.com/badges/a02d40bb-813c-4381-a37d-78fe8eaf853d/public_url" target="_blank"><img
+              src="./images/career-ready.png" alt="Career readiness badge"></a>
+          <a href="https://www.credly.com/badges/fd4b75d7-440a-4772-917b-d65326edcfb5/public_url" target="_blank"><img
+              src="./images/back-end-web-applications.png" alt="Beckend web applications badge"></a>
+          <a href="https://www.credly.com/badges/1ea2283c-0d32-4c68-92cf-7adf8e1f79ca/public_url" target="_blank"><img
+              src="./images/git-version-control.png" alt="Git version control badge"></a>
+          <a href="https://www.credly.com/badges/b0b26e2e-61f3-4934-b1e3-bca290d1623c/public_url" target="_blank"><img
+              src="./images/front-end-web-applications.png" alt="Front end web applications badge"></a>
+          <a href="https://www.credly.com/badges/bbf83c54-d3c4-42fe-bff5-28e07ea482c6/public_url" target="_blank"><img
+              src="./images/problem-solver-debugger.1.png" alt="Problem solver and debugger badge"></a>
+          <a href="https://www.credly.com/badges/e64360d8-7e09-451c-9c3c-53d28a4b9fe6/public_url" target="_blank"><img
+              src="./images/web-development-foundations.png" alt="Web development foundations badge"></a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <h3>Get In Touch</h3>
+    <p>Email: <a href=""><strong>casey.sherman@bryanuniversity.edu</strong></a></p>
+    <p>Phone: <strong>(200)123-4567</strong></p>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </body>
 
 </html>
