--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -17,7 +17,7 @@
       <div id="landing-text">
         <div id="landing-text-inner">
           <h1>CASEY SHERMAN</h1>
-          <h2>Web Development and Design</h2>
+          <h2>Web Developer and Designer</h2>
           <a href="#images" class="btn" id="view-work">View Work</a>
         </div>
       </div>
@@ -30,33 +30,45 @@
         <h2>My Work</h2>
       </div>
 
-      <img src="https://source.unsplash.com/random/?nature,water" alt="random image">
       <div class="caption">
-        <h3>Photo One</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+        <a href="https://netflix-clone-65351.firebaseapp.com/" target="_blank">
+          <h3>Netflix Clone</h3>
+        </a>
+        <p>Designed with React and using the Movie Database to bring in previews of movies.</p>
       </div>
-      <img src="https://source.unsplash.com/random/?nature,trees" alt="random image">
+      <img src="./images/nf_clone.png" alt="random image">
       <div class="caption">
         <h3>Photo Two</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
-      <img src="https://source.unsplash.com/random/?nature,flowers" alt="random image">
+      <img src="https://source.unsplash.com/random/?nature,trees" alt="random image">
       <div class="caption">
         <h3>Photo Three</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
-      <img src="https://source.unsplash.com/random/?nature,animals" alt="random image">
+      <img src="https://source.unsplash.com/random/?nature,flowers" alt="random image">
       <div class="caption">
         <h3>Photo Four</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
-      <img src="https://source.unsplash.com/random/?nature,sky" alt="random image">
+      <img src="https://source.unsplash.com/random/?nature,animals" alt="random image">
       <div class="caption">
         <h3>Photo Five</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
+      <img src="https://source.unsplash.com/random/?nature,sky" alt="random image">
+
 
       <!-- Badges Area -->
+      <div class="caption">
+        <h3>Accolades</h3>
+        <div class="accolades">
+          <p>Associate's Degree in Full Stack Web Development</p>
+          <p>4.0 GPA</p>
+          <p>Deans List Student</p>
+        </div>
+      </div>
+
       <div id="badges-container">
         <div id="badges-header">
           <h1>University issued badges</h1>
@@ -97,8 +109,15 @@
 
   <footer>
     <h3>Get In Touch</h3>
-    <p>Email: <a href=""><strong>casey.sherman@bryanuniversity.edu</strong></a></p>
-    <p>Phone: <strong>(200)123-4567</strong></p>
+    <p>Email: <a href="https://mail.google.com/mail/u/2/#inbox"
+        target="_blank"><strong>casey.sherman@bryanuniversity.edu</strong></a>
+    </p>
+    <p>Phone: <strong>(208)244-2760</strong></p>
+    <h2>Other Sites</h2>
+    <div id="contact-sites">
+      <a href="https://www.linkedin.com/in/csherms/" target="_blank"><strong>LinkedIn.com</strong></a>
+      <a href="https://portfolium.com/caseysherman2" target="_blank"><strong>Portfolium.com</strong></a>
+    </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
