--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -26,32 +26,36 @@
 
     <!-- Work Area -->
     <div id="images">
-      <div id="header">
+      <div class="header">
         <h2>My Work</h2>
       </div>
-
+      <!-- Work Area Images -->
       <div class="caption">
         <a href="https://netflix-clone-65351.firebaseapp.com/" target="_blank">
           <h3>Netflix Clone</h3>
         </a>
         <p>Designed with React and using the Movie Database to bring in previews of movies.</p>
       </div>
-      <img src="./images/nf_clone.png" alt="random image">
+      <img src="./images/nf_clone.png" alt="Image of Netflix">
+
       <div class="caption">
         <h3>Photo Two</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
       <img src="https://source.unsplash.com/random/?nature,trees" alt="random image">
+
       <div class="caption">
         <h3>Photo Three</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
       <img src="https://source.unsplash.com/random/?nature,flowers" alt="random image">
+
       <div class="caption">
         <h3>Photo Four</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
       <img src="https://source.unsplash.com/random/?nature,animals" alt="random image">
+
       <div class="caption">
         <h3>Photo Five</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
@@ -60,8 +64,10 @@
 
 
       <!-- Badges Area -->
+      <div class="header">
+        <h2>Accolades</h2>
+      </div>
       <div class="caption">
-        <h3>Accolades</h3>
         <div class="accolades">
           <p>Associate's Degree in Full Stack Web Development</p>
           <p>4.0 GPA</p>
@@ -107,18 +113,23 @@
     </div>
   </main>
 
+  <!-- Footer Area -->
   <footer>
     <h3>Get In Touch</h3>
-    <p>Email: <a href="https://mail.google.com/mail/u/2/#inbox"
+    <p>Email: <a href="mailto: https://mail.google.com/mail/u/2/#inbox"
         target="_blank"><strong>casey.sherman@bryanuniversity.edu</strong></a>
     </p>
     <p>Phone: <strong>(208)244-2760</strong></p>
-    <h2>Other Sites</h2>
+    <h2>Where else to find me</h2>
     <div id="contact-sites">
       <a href="https://www.linkedin.com/in/csherms/" target="_blank"><strong>LinkedIn.com</strong></a>
       <a href="https://portfolium.com/caseysherman2" target="_blank"><strong>Portfolium.com</strong></a>
     </div>
   </footer>
+
+
+
+
 
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
