added second button and certs

--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -19,6 +19,7 @@
           <h1>CASEY SHERMAN</h1>
           <h2>Web Developer and Designer</h2>
           <a href="#images" class="btn" id="view-work">View Work</a>
+          <a href="#accolades" class="btn" id="view-accolades">View Credentials</a>
         </div>
       </div>
       <div id="landing-image"></div>
@@ -34,7 +35,9 @@
         <a href="https://netflix-clone-65351.firebaseapp.com/" target="_blank">
           <h3>Netflix Clone</h3>
         </a>
-        <p>Designed with React and using the Movie Database to bring in previews of movies.</p>
+        <p>Designed with React, JSX, JavaScript and CSS and utilizing the Movie Datbase API to show live previews of
+          shows on Netflix.
+        </p>
       </div>
       <img src="./images/nf_clone.png" alt="Image of Netflix">
 
@@ -64,50 +67,56 @@
 
 
       <!-- Badges Area -->
-      <div class="header">
-        <h2>Accolades</h2>
-      </div>
-      <div class="caption">
-        <div class="accolades">
-          <p>Associate's Degree in Full Stack Web Development</p>
-          <p>4.0 GPA</p>
-          <p>Deans List Student</p>
+      <div id="accolades">
+        <div class="header">
+          <h2>Accolades</h2>
         </div>
-      </div>
+        <div class="caption">
+          <div class="accolades">
+            <p>Associate's Degree in Full Stack Web Development</p>
+            <p>4.0 GPA</p>
+            <p>Deans List Student</p>
+          </div>
+        </div>
 
-      <div id="badges-container">
-        <div id="badges-header">
-          <h1>University issued badges</h1>
-        </div>
-        <div id="badges">
-          <a href="https://www.credly.com/badges/3ee15477-fc6e-4c4d-8feb-86d31bedc857/public_url" target="_blank"><img
-              src="./images/project-management.png" alt="Project management badge"></a>
-          <a href="https://www.credly.com/badges/ff70a63a-b0e2-47af-9910-5e8fff5cdeef/public_url" target="_blank"><img
-              src="./images/end-to-end-e2e-testing.png" alt="End to end testing badge"></a>
-          <a href="https://www.credly.com/badges/f521bb83-91ab-459d-9022-9fee4ea99df6/public_url" target="_blank"><img
-              src="./images/data-structures-algorithms.png" alt="Data structures and algorithms badge"></a>
-          <a href="https://www.credly.com/badges/c27b7a30-e84e-495d-8c40-998b778ffea0/public_url" target="_blank"><img
-              src="./images/web-infrastructure-server-deployment.png"
-              alt="Web infrastructure and server deployment badge"></a>
-          <a href="https://www.credly.com/badges/05445e74-fda1-4e7f-899e-5533e7729339/public_url" target="_blank"><img
-              src="./images/advanced-full-stack-web-development.png"
-              alt="Advanced full stack web development badge"></a>
-          <a href="https://www.credly.com/badges/dc6cfee7-08b1-446c-9071-812086837f5d/public_url" target="_blank"><img
-              src="./images/object-oriented-programming.png" alt="Object oriented programming badge"></a>
-          <a href="https://www.credly.com/badges/abc11d3f-750f-41c2-a9b4-987e0ed075a0/public_url" target="_blank"><img
-              src="./images/full-stack-web-developer-mern.png" alt="MERN stack badge"></a>
-          <a href="https://www.credly.com/badges/a02d40bb-813c-4381-a37d-78fe8eaf853d/public_url" target="_blank"><img
-              src="./images/career-ready.png" alt="Career readiness badge"></a>
-          <a href="https://www.credly.com/badges/fd4b75d7-440a-4772-917b-d65326edcfb5/public_url" target="_blank"><img
-              src="./images/back-end-web-applications.png" alt="Beckend web applications badge"></a>
-          <a href="https://www.credly.com/badges/1ea2283c-0d32-4c68-92cf-7adf8e1f79ca/public_url" target="_blank"><img
-              src="./images/git-version-control.png" alt="Git version control badge"></a>
-          <a href="https://www.credly.com/badges/b0b26e2e-61f3-4934-b1e3-bca290d1623c/public_url" target="_blank"><img
-              src="./images/front-end-web-applications.png" alt="Front end web applications badge"></a>
-          <a href="https://www.credly.com/badges/bbf83c54-d3c4-42fe-bff5-28e07ea482c6/public_url" target="_blank"><img
-              src="./images/problem-solver-debugger.1.png" alt="Problem solver and debugger badge"></a>
-          <a href="https://www.credly.com/badges/e64360d8-7e09-451c-9c3c-53d28a4b9fe6/public_url" target="_blank"><img
-              src="./images/web-development-foundations.png" alt="Web development foundations badge"></a>
+        <div id="badges-container">
+          <div id="badges-header">
+            <h1>University issued badges</h1>
+          </div>
+          <div id="badges">
+            <a href="https://www.credly.com/badges/3ee15477-fc6e-4c4d-8feb-86d31bedc857/public_url" target="_blank"><img
+                src="./images/project-management.png" alt="Project management badge"></a>
+            <a href="https://www.credly.com/badges/ff70a63a-b0e2-47af-9910-5e8fff5cdeef/public_url" target="_blank"><img
+                src="./images/end-to-end-e2e-testing.png" alt="End to end testing badge"></a>
+            <a href="https://www.credly.com/badges/f521bb83-91ab-459d-9022-9fee4ea99df6/public_url" target="_blank"><img
+                src="./images/data-structures-algorithms.png" alt="Data structures and algorithms badge"></a>
+            <a href="https://www.credly.com/badges/c27b7a30-e84e-495d-8c40-998b778ffea0/public_url" target="_blank"><img
+                src="./images/web-infrastructure-server-deployment.png"
+                alt="Web infrastructure and server deployment badge"></a>
+            <a href="https://www.credly.com/badges/05445e74-fda1-4e7f-899e-5533e7729339/public_url" target="_blank"><img
+                src="./images/advanced-full-stack-web-development.png"
+                alt="Advanced full stack web development badge"></a>
+            <a href="https://www.credly.com/badges/dc6cfee7-08b1-446c-9071-812086837f5d/public_url" target="_blank"><img
+                src="./images/object-oriented-programming.png" alt="Object oriented programming badge"></a>
+            <a href="https://www.credly.com/badges/abc11d3f-750f-41c2-a9b4-987e0ed075a0/public_url" target="_blank"><img
+                src="./images/full-stack-web-developer-mern.png" alt="MERN stack badge"></a>
+            <a href="https://www.credly.com/badges/a02d40bb-813c-4381-a37d-78fe8eaf853d/public_url" target="_blank"><img
+                src="./images/career-ready.png" alt="Career readiness badge"></a>
+            <a href="https://www.credly.com/badges/fd4b75d7-440a-4772-917b-d65326edcfb5/public_url" target="_blank"><img
+                src="./images/back-end-web-applications.png" alt="Beckend web applications badge"></a>
+            <a href="https://www.credly.com/badges/1ea2283c-0d32-4c68-92cf-7adf8e1f79ca/public_url" target="_blank"><img
+                src="./images/git-version-control.png" alt="Git version control badge"></a>
+            <a href="https://www.credly.com/badges/b0b26e2e-61f3-4934-b1e3-bca290d1623c/public_url" target="_blank"><img
+                src="./images/front-end-web-applications.png" alt="Front end web applications badge"></a>
+            <a href="https://www.credly.com/badges/bbf83c54-d3c4-42fe-bff5-28e07ea482c6/public_url" target="_blank"><img
+                src="./images/problem-solver-debugger.1.png" alt="Problem solver and debugger badge"></a>
+            <a href="https://www.credly.com/badges/e64360d8-7e09-451c-9c3c-53d28a4b9fe6/public_url" target="_blank"><img
+                src="./images/web-development-foundations.png" alt="Web development foundations badge"></a>
+          </div>
+          <div id="certificates">
+            <img src="./images/Degree.jpg" alt="Full Stack Web Development Degree">
+            <img src="./images/MERN.jpg" alt="Mern Stack Certificate">
+          </div>
         </div>
       </div>
     </div>
@@ -121,9 +130,11 @@
     </p>
     <p>Phone: <strong>(208)244-2760</strong></p>
     <h2>Where else to find me</h2>
+    <br>
     <div id="contact-sites">
       <a href="https://www.linkedin.com/in/csherms/" target="_blank"><strong>LinkedIn.com</strong></a>
       <a href="https://portfolium.com/caseysherman2" target="_blank"><strong>Portfolium.com</strong></a>
+      <a href="https://github.com/csherms" target="_blank"><strong>GitHub.com</strong></a>
     </div>
   </footer>
 
