--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -114,6 +114,7 @@
                 src="./images/web-development-foundations.png" alt="Web development foundations badge"></a>
           </div>
           <div id="certificates">
+            <h1>Degree and Certificate</h1>
             <img src="./images/Degree.jpg" alt="Full Stack Web Development Degree">
             <img src="./images/MERN.jpg" alt="Mern Stack Certificate">
           </div>
