--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -42,10 +42,12 @@
       <img src="./images/nf_clone.png" alt="Image of Netflix">
 
       <div class="caption">
-        <h3>Photo Two</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+        <a href="https://csherms.github.io/My_Websites/stopwatch/" target="_blank">
+          <h3>Stopwatch</h3>
+        </a>
+        <p>A simple stopwatch application using HTML, CSS and JavaScript</p>
       </div>
-      <img src="https://source.unsplash.com/random/?nature,trees" alt="random image">
+      <img src="./images/stopwatch.png" alt="Stopwatch">
 
       <div class="caption">
         <h3>Photo Three</h3>
