added calculator application

--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -50,10 +50,12 @@
       <img src="./images/stopwatch.png" alt="Stopwatch">
 
       <div class="caption">
-        <h3>Photo Three</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
+        <a href="htttps://csherms.github.io/My_Websites/calculator/" target="_blank">
+          <h3>Calculator</h3>
+        </a>
+        <p>Calculator applicaton made with HTML, CSS and JavaScript with theme toggle button.</p>
       </div>
-      <img src="https://source.unsplash.com/random/?nature,flowers" alt="random image">
+      <img src="./images/calculator.png" alt="Calculator">
 
       <div class="caption">
         <h3>Photo Four</h3>
