--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -50,7 +50,7 @@
       <img src="./images/stopwatch.png" alt="Stopwatch">
 
       <div class="caption">
-        <a href="htttps://csherms.github.io/My_Websites/calculator/" target="_blank">
+        <a href="https://csherms.github.io/My_Websites/calculator/" target="_blank">
           <h3>Calculator</h3>
         </a>
         <p>Calculator applicaton made with HTML, CSS and JavaScript with theme toggle button.</p>
