added alarm clock app

--- a/second_portfolio/index.html
+++ b/second_portfolio/index.html
@@ -32,7 +32,15 @@
       </div>
       <!-- Work Area Images -->
       <div class="caption">
-        <a href="https://netflix-clone-65351.firebaseapp.com/" target="_blank">
+        <a href="https://csherms.github.io/My_Websites/Projects/clock_app/" target="_blank" class="pages">
+          <h3>Alarm Clock App</h3>
+        </a>
+        <p>A simple alarm clock app designed using HTML, CSS and JavaScript</p>
+      </div>
+      <img src="./images/alarm_clock.png" alt="alarm clock application">
+
+      <div class="caption">
+        <a href="https://netflix-clone-65351.firebaseapp.com/" target="_blank" class="pages">
           <h3>Netflix Clone</h3>
         </a>
         <p>Designed with React, JSX, JavaScript and CSS and utilizing the Movie Datbase API to show live previews of
@@ -42,7 +50,7 @@
       <img src="./images/nf_clone.png" alt="Image of Netflix">
 
       <div class="caption">
-        <a href="https://csherms.github.io/My_Websites/Projects/stopwatch/" target="_blank">
+        <a href="https://csherms.github.io/My_Websites/Projects/stopwatch/" target="_blank" class="pages">
           <h3>Stopwatch</h3>
         </a>
         <p>A simple stopwatch application using HTML, CSS and JavaScript</p>
@@ -50,7 +58,7 @@
       <img src="./images/stopwatch.png" alt="Stopwatch">
 
       <div class="caption">
-        <a href="https://csherms.github.io/My_Websites/Projects/calculator/" target="_blank">
+        <a href="https://csherms.github.io/My_Websites/Projects/calculator/" target="_blank" class="pages">
           <h3>Calculator</h3>
         </a>
         <p>Calculator applicaton made with HTML, CSS and JavaScript with theme toggle button.</p>
@@ -58,13 +66,10 @@
       <img src="./images/calculator.png" alt="Calculator">
 
       <div class="caption">
-        <h3>Photo Four</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
-      </div>
-      <img src="https://source.unsplash.com/random/?nature,animals" alt="random image">
+        <a href="#" target="_blank" class="pages">
+          <h3>Photo Five</h3>
+        </a>
 
-      <div class="caption">
-        <h3>Photo Five</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, voluptatum!</p>
       </div>
       <img src="https://source.unsplash.com/random/?nature,sky" alt="random image">
